--- a/apps/production/podinfo-values.yaml
+++ b/apps/production/podinfo-values.yaml
@@ -8,6 +8,7 @@ spec:
     spec:
       version: ">=1.0.0"
   values:
+    replicaCount: 1
     ingress:
       hosts:
         - host: podinfo.production
